public/stylesheets/sass/client/home.sass
#jqt
  &.landscape
    height: 210px
    min-height: 210px
    div.main
      height: 210px
  &.portrait
    height: 367px
    min-height: 367px    
    div.main
      height: 367px      
  div.main
    position: relative
    z-index: 1
    overflow-y: scroll
    div.scroller
      div.course
        padding: 20px 10px
        div.header
          height: 70px
          a.price
            //font-size: 11pt
            margin-top: 20px
            margin-right: 10px
            float: right
            //padding-right: 30px
            //height: 23px
          div.picture
            float: left
            width: 57px
            height: 57px
            overflow: hidden
            margin-left: 5px
            margin-right: 20px
            -webkit-box-shadow: 0px 1px 5px #545456
            border-radius: 10px
          div.creator
            font-size: 10pt
            color: #3a3a3a
          div.title
            font-size: 12pt
            color: black
            width: 140px
            margin-left: 80px
            white-space: normal
        div.description
          padding: 0px 5px
          direction: rtl          
      ul
        margin: 0px
        border: 0px solid
        li
          border-radius: 0px
          height: 59px
          text-shadow: 0px 1px 1px #c2c2c2
          padding-top: 10px
          div.price
            font-size: 11pt
            color: #3a3a3a
            margin-top: 20px
            margin-right: 0px
            float: right
            padding-right: 30px
            height: 23px
            background: url('/images/client/jqtouch/themes/apple/chevron.png') -1px right no-repeat
          div.picture
            float: left
            width: 57px
            height: 57px
            overflow: hidden
            margin-left: 5px
            margin-right: 20px
            -webkit-box-shadow: 0px 1px 5px #545456
            border-radius: 10px
          div.creator
            font-size: 10pt
            color: #3a3a3a            
          div.title
            font-size: 12pt
            color: black            
            width: 120px
            margin-left: 80px
            white-space: normal
          &.odd
            background-color: #98989c
            border-bottom: 1px solid #898a8d
          &.even
            background-color: #adadb0
            border-top: 1px solid #bbbbbd
div.bar
  position: absolute
  bottom: 0px
  height: 49px
  width: 100%
  background: url('/images/client/bar_background.png') repeat-x
  z-index: 1000
  a
    margin-left: 2px
    width: 70px
    color: #999999
    font-size: 8pt
    float: left
    text-decoration: none
    font-family: Helvetica
    font-weight: bold
    text-align: center
    width: 61px
    height: 49px
    line-height: 80px
    background-position:  center top
    background-repeat:  no-repeat
    &.selected , &:active
      color: white
      &.top
        background-image: url('/images/client/top_selected.png')
      &.featured
        background-image: url('/images/client/featured_selected.png')
      &.categories
        background-image: url('/images/client/categories_selected.png')
      &.search
        background-image: url('/images/client/search_selected.png')
      &.downloads
        background-image: url('/images/client/downloads_selected.png')
    &.top
      background-image: url('/images/client/top.png')
    &.featured
      background-image: url('/images/client/featured.png')
    &.categories
      background-image: url('/images/client/categories.png')
    &.search
      background-image: url('/images/client/search.png')
    &.downloads
      background-image: url('/images/client/downloads.png')

